Homepage background image update

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -12,9 +12,13 @@
 
 <body>
     <!-- Welcome message and restaurant logo -->
+
+    <img class="select1 bg-img" src="@Url.Content("~/img/restaurant-greens-background.jpeg")" alt="Background image" />
+
+    
     <div class="text-center">
         <h1 class="display-2">Pump Iron and Power Up with Protein</h1>
-        <img src="@Url.Content("~/img/Logo-Big.png")" alt="Gym Junkie Cuisine logo" class="image-formatting">
+        <img src="@Url.Content("~/img/logo_transparent.png")" alt="Gym Junkie Cuisine logo" class="image-formatting">
     </div>
 
     <!-- The 'About Us' iformation of the website -->
@@ -42,7 +46,6 @@
     </article>
 
     <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="image-formatting">
-
 </body>
 
 </html>
