--- a/Web App/Pages/Shared/_LoginPartial.cshtml
+++ b/Web App/Pages/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link px-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"> Account </a>
+        <a id="manage" class="nav-link mx-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"> Account </a>
     </li>
     <li class="nav-item text-center">
         <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
