Homepage logo overlay added

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -11,15 +11,14 @@
 </head>
 
 <body>
-    <!-- Welcome message and restaurant logo -->
-
-    <img class="select1 bg-img" src="@Url.Content("~/img/restaurant-greens-background.jpeg")" alt="Background image" />
-
-    
-    <div class="text-center">
-        <h1 class="display-2">Pump Iron and Power Up with Protein</h1>
-        <img src="@Url.Content("~/img/logo_transparent.png")" alt="Gym Junkie Cuisine logo" class="image-formatting">
+    <!-- Background image and restaurant logo -->
+    <img class="select1 bg-img" src="@Url.Content("~/img/restaurant.jpg")" alt="Background image" />
+    <div class="text-center overlay">
+        <img src="@Url.Content("~/img/logo.png")" alt="Gym Junkie Cuisine logo" class="image-formatting">
     </div>
+
+    <!-- Restaurant slogan -->
+    <h1 class="display-2">Eat BIG To Get BIG</h1>
 
     <!-- The 'About Us' iformation of the website -->
     <article>        
