--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     <!-- End of adapted code -->
                     @if (User.IsInRole("Admin"))
                     {
-                            <li class="nav-item">
+                            <li class="nav-item px-4">
                                 <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
                             </li>
                     }
