--- a/Web App/wwwroot/css/site.css
+++ b/Web App/wwwroot/css/site.css
@@ -12,14 +12,39 @@
     body {
         overflow-x: hidden !important;
     }
+
+    .overlay {
+        top: 35vh;
+    }
 }
 
-/* Setting font size for screens with 768px+ width */
+/* Setting responsive design formatting for screens with width 768px+ */
 @media (min-width: 768px) {
     html {
         font-size: 16px;
     }
+
+    .overlay {
+        top: 20vh;
+    }
 }
+
+/* Setting responsive design formatting for larger screens with width 1100px+ */
+@media (min-width: 1100px) {
+    .overlay {
+        top: 10vh;
+        width: fit-content;
+    }
+}
+
+
+/* Setting responsive design formatting for larger screens with width 1500px+ */
+@media (min-width: 1500px) {
+    html {
+        /* font-size: 20px ?? *** */
+    }
+}
+
 
 /* HTML page formatting */
 html {
@@ -293,7 +318,12 @@ main {
     transform: translate(-12vw, -3vh);
 }
 
-/* Overlay image over other elements */
-.ovarlay-img {
-
+/* Styling for restaurant slogan text *** */
+.overlay {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
