Homepage image display added

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -18,10 +18,10 @@
     </div>
 
     <!-- Restaurant slogan -->
-    <h1 class="display-2">Eat BIG To Get BIG</h1>
+    <h1 class="display-2 text-center my-5">Eat BIG To Get BIG</h1>
 
     <!-- The 'About Us' iformation of the website -->
-    <article>        
+    <article class="text-center px-5 my-5">        
         <h2>Our Story</h2>
         <p>
             Welcome to Gym Junkie Cuisine &trade;, where we believe that healthy living starts with what you eat.
@@ -44,7 +44,15 @@
         </p>
     </article>
 
-    <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="image-formatting">
+    <div class="img-container">
+        <img src="@Url.Content("~/img/steak.jpg")" alt="Delicious steak meal" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/spicy-rice-cakes.jpg")" alt="spicy rice cakes meal" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/dessert.jpg")" alt="delicious gold-covered dessert" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/crispy-chicken.jpg")" alt="crispy chilli chicken meal" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/protein-bar.jpg")" alt="protein bar" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/mixed-berry-milkshake.jpg")" alt="mixed berry milkshake" class="image-formatting img-frame">
+    </div>
+
 </body>
 
 </html>
