--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Page title -->
-    <h1>Menu Items List</h1>
+    <h1>Edit Menu Items</h1>
 
     <!-- Quick-access to create a new dish (button) -->
     <p>
