--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     @if (User.IsInRole("Admin"))
                     {
                             <li class="nav-item px-4">
-                                <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
+                                <a class="nav-link text-danger" asp-area="" asp-page="MenuModify/Index">Admin</a>
                             </li>
                     }
                     }
