New menu item added

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -51,6 +51,7 @@
         <img src="@Url.Content("~/img/crispy-chicken.jpg")" alt="crispy chilli chicken meal" class="image-formatting img-frame">
         <img src="@Url.Content("~/img/protein-bar.jpg")" alt="protein bar" class="image-formatting img-frame">
         <img src="@Url.Content("~/img/mixed-berry-milkshake.jpg")" alt="mixed berry milkshake" class="image-formatting img-frame">
+        <img src="@Url.Content("~/img/greens-smoothie.jpg")" alt="greens smoothie drink" class="image-formatting img-frame">
     </div>
 
 </body>
