--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/Web_App.styles.css" asp-append-version="true" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> *** -->
         <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico"/>
     </head>
 
@@ -44,7 +44,7 @@
                     @if (User.IsInRole("Admin"))
                     {
                             <li class="nav-item px-4">
-                                <a class="nav-link text-danger" asp-area="" asp-page="MenuModify/Index">Admin</a>
+                                <a class="nav-link text-danger" asp-area="" asp-page="Admin/Index">Admin</a>
                             </li>
                     }
                     }
@@ -77,7 +77,7 @@
 
     <!-- Button that takes the user to the top of the page using JavaScript -->
     <div class="floating-button">
-        <button id="to_top_button" class="btn btn-gold" onclick="toTop()">Back to Top</button>
+        <button id="to_top_button" class="btn btn-grey" onclick="toTop()">Back to Top</button>
     </div>
 
     <!-- Footer -->
@@ -86,26 +86,34 @@
             <div class="container p-4 pb-0">
                 <!-- Section: Social media -->
                 <section class="mb-4">
-                    <!-- Facebook -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://en-gb.facebook.com/" role="button" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <!-- Twitter -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/?lang=en-GB/" role="button" target="_blank"><i class="fa fa-twitter"></i></a>
-                    <!-- Google -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://www.google.co.uk/" role="button" target="_blank"><i class="fa fa-google"></i></a>
-                    <!-- Instagram -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <!-- Linkedin -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://uk.linkedin.com/" role="button" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <!-- Github -->
                     <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/iAdam368?tab=repositories/" role="button" target="_blank"><i class="fa fa-github"></i></a>
                 </section>
                 <!-- Section: Social media -->
             </div>
             <!-- Grid container -->
 
-            <!-- Copyright -->
+            <!-- Copyright + CSS & HTML Validation -->
             <div class="text-center p-3 grey-background">
-                <a class="text-white" asp-area="" asp-page="/Privacy"> &copy; 2023 Copyright: Gym Junkie Cuisine</a>
+                <p>
+                    <a class="text-white" asp-area="" asp-page="/Privacy"> &copy; 2023 Copyright: Gym Junkie Cuisine</a>
+                </p>
+                @if (User.IsInRole("Admin"))
+                {
+                <p>
+                    <a asp-page="/Admin/Index">• Admin Access</a>
+                </p>
+                }
+                <p>
+                    <a href="https://jigsaw.w3.org/css-validator/">• Validate CSS</a>
+                </p>
+                <p>
+                    <a href="https://validator.w3.org/#validate_by_uri/">• Validate HTML</a>
+                </p>
             </div> 
             <!-- Copyright -->
 
