CSS validation pass

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Background image and restaurant logo -->
-    <img class="select1 bg-img" src="@Url.Content("~/img/restaurant.jpg")" alt="Background image" />
+    <img class="select1 bg-img" src="@Url.Content("~/img/restaurant.jpg")" alt="Background image">
     <div class="text-center overlay">
         <img src="@Url.Content("~/img/logo.png")" alt="Gym Junkie Cuisine logo" class="image-formatting">
     </div>
